Refactored Entity, modifying service and test